attendance wokrs well just change the colors and arrange the form

--- a/Attendance Management System/Attendance Management System.csproj
+++ b/Attendance Management System/Attendance Management System.csproj
@@ -11,6 +11,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Forms\TeacherForm1.cs" />
+    <Compile Remove="Forms\TeacherForm1.Designer.cs" />
+    <Compile Remove="Forms\TeacherForm2.cs" />
+    <Compile Remove="Forms\TeacherForm2.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="Forms\TeacherForm1.resx" />
+    <EmbeddedResource Remove="Forms\TeacherForm2.resx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Webalys-Kameleon.ico" />
   </ItemGroup>
 
